# coarse-to-fine-shapes

./: .gitignore  PVD-Input-Chair.xml  README.md  Refined-Output-Chair.xml  TODO.md  airplane_4k_results-final.pth  airplane_6k_results.pth  airplane_part_results.pth  airplane_results.pth  better_patches.ipynb  chair_part_results.pth  chair_results.pth  chair_results_5k_selected_points.pth  chair_results_6k.pth  coarse-shape.xml  dataloader.ipynb  dataloaders_ShapeNetCore_R2N2.ipynb  evaluate_PVD_output.ipynb  inference_generation.py  input.xml  install_cu11_8_pytorch.sh  install_requirements.sh  mesh_reconstruction.ipynb  mitsuba_vis.ipynb  network_visualiztion.ipynb  noise.xml  normals_10k.ply  output.xml  patch_creation.ipynb  patch_creation_environment.yml  pip-requirements.txt  plot_image_grid.py  poin_transformer_vis.ipynb  point_transformer_results.pth  pyproject.toml  requirement_voxel.txt  requirements-manual.txt  score-denoise-experiment.ipynb  shapenet_airplane_pvd_closest_neighbour.pth  shapes.ipynb  (+29 more)
visuals/: CMakeLists.txt  main.cpp  mitsuba_vis.py  moving_least_squares.cpp  visuals_util.py
visuals/point-transformer/2024-01-30_23-46-44/: 00-input.pth  00-refined_output.pth  00-residuals.pth  01-input.pth  01-refined_output.pth  01-residuals.pth  02-input.pth  02-refined_output.pth  02-residuals.pth  03-input.pth  03-refined_output.pth  03-residuals.pth  04-input.pth  04-refined_output.pth  04-residuals.pth  05-input.pth  05-refined_output.pth  05-residuals.pth  06-input.pth  06-refined_output.pth  06-residuals.pth  (+10 more)
visuals/venv_shapes_3_6/: pyvenv.cfg
(+987 files in other folders)
